--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0"
     },
