--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "firebase/php-jwt": "^6.0",
         "fruitcake/laravel-cors": "^2.0.5",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
