Feature/client api (#38)
* List clients

* client api

Co-authored-by: Dilip chaudhary <dilipchaudhary.yunige@gmail.com>
Co-authored-by: smaharjan974 <sanjaymaharjan.yunige@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,7 @@ AIRTABLE_BASE_URL=https://api.airtable.com/v0/
 AIRTABLE_APP_ID=appB1i3egOKfKVgaW
 AIRTABLE_API_KEY=keycf9P1tjJMYEKTJ
 AIRTABLE_TYPECAST=false
+
+ZOOM_API_URL="https://api.zoom.us/v2/"
+ZOOM_API_KEY="NZHMhPvSScKA9qP3mcsiTg"
+ZOOM_API_SECRET="CfUQLvPc3gUnti9xdZOXFjItVW70WlX7NUVR"
