--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.23",
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0"
