--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "firebase/php-jwt": "^6.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.4",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7",
