--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.23",
+        "picqer/php-barcode-generator": "^2.2",
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^5.5",
         "spatie/laravel-query-builder": "^5.0"
